Crear ruta para obtener reservaciones por mes
